# desktop-app

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  README.md  music-assistant.desktop  package.json
.github/homebrew/: README.md  music-assistant.rb.template
.github/workflows/: build-flatpak.yml  build-packages.yml  build-release.yml  ci.yml  lokalise-download.yml  lokalise-upload.yml  release.yml  test.yml
.husky/: pre-commit
packaging/flatpak/: README.md  cargo-sources.json  generate-cargo-sources.sh  io.music_assistant.Companion.desktop  io.music_assistant.Companion.metainfo.xml  io.music_assistant.Companion.yml
packaging/pages/: index.html
scripts/ci/: build-apt-repository.sh  build-flatpak-repository.sh  build-rpm-repository.sh  install-package-pages.sh  prepare-pages-tree.sh
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/: clipboard-polyfill.js  i18n.js  index.html  index.test.mjs  settings.html
src-tauri/resources/translations/: en.json  es.json  nl.json  sr.json  sr_Latn.json
src-tauri/src/: discord_rpc.rs  i18n.rs  lib.rs  linux_theme.rs  logging.rs  ma_api.rs  main.rs  mdns_discovery.rs  media_controls.rs  now_playing.rs  settings.rs
src-tauri/src/media_controls/: linux.rs  macos.rs  mod.rs  souvlaki_backend.rs  windows.rs
src-tauri/src/sendspin/: device_format_helper.rs  devices.rs  mod.rs  now_playing_state.rs  protocol.rs  software_gain.rs  volume_control.rs
src-tauri/src/sendspin/volume_control/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/templates/: flatpak-autostart.desktop
