[package]
authors = ["The Music Assistant Team"]
description = "Music Assistant Companion App"
edition = "2021"
license = "Apache-2.0"
name = "music-assistant"
repository = "https://github.com/music-assistant/desktop-app"
rust-version = "1.85"
# Placeholder, do not use
# Display code must read the Tauri package info
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "app_lib"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
dirs = "5.0"
discord-rich-presence = "1.0"
flume = "0.11"
log = "0.4"
mdns-sd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2.9"
tauri-plugin-window-state = "2"

# Sendspin native client
cpal = "0.18"
futures-util = "0.3"
hostname = "0.4"
parking_lot = "0.12"
png = "0.17"
sendspin = { git = "https://github.com/Sendspin/sendspin-rs", tag = "v0.3.5" }
tokio = { version = "1", features = ["sync", "macros", "time"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
ureq = "3.2.1"
uuid = { version = "1", features = ["v4"] }

# System media controls (Now Playing integration).
# macOS uses the native objc2 backend (src/media_controls/macos.rs), Linux uses
# a direct zbus MPRIS backend (src/media_controls/linux.rs), and Windows uses
# native System Media Transport Controls via the windows crate.

# Platform-specific hardware volume control and Windows media controls.
[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.61", features = [
  "Foundation",
  "Media",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_System_WinRT",
  "Win32_UI_Accessibility",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "=0.61.2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
coreaudio-sys = "0.2"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-media-player = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.28"
zbus = "5.16"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that don't hurt code quality
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
unreadable_literal = "allow"
similar_names = "allow"
wildcard_imports = "allow"
uninlined_format_args = "allow"
redundant_closure_for_method_calls = "allow"
significant_drop_tightening = "allow"
ignored_unit_patterns = "allow"
needless_pass_by_value = "allow"

# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.
